# Quad-RemeshingDemo

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AutoRemesher.h.F4174FCB106A30F0.idx  complex.h.ECB619C143F5F6EE.idx  field_smoother.h.EA7185FAB56E3822.idx  mesh_field_smoother.h.A050A96033507536.idx  mesh_manager.h.57DD42D05E8A81AD.idx  triangle_mesh_type.h.0B7288C1AFE9B1DD.idx
libs/quadwild/components/quad_from_patches/: quad_from_patches.cpp  quad_from_patches.h
libs/quadwild/libs/quadretopology/quadretopology/includes/: qr_patterns.cpp  qr_patterns.h
libs/quadwild/quadwild/: functions.h
src/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  compile_commands.json  main.cpp
src/.cache/clangd/index/: MainApplication.cpp.1CC234CD56D90E84.idx  MainApplication.hpp.731D56AD686467AF.idx  MainWindow.hpp.7BB1DD171D629282.idx  main.cpp.39845110A176A17C.idx
src/Assets/: bucket_p0.patch  gear_p0.patch  twirl20k_p0.patch
src/Gui/: MainWindow.cpp  MainWindow.hpp
